# lorafilm-movie-metadata-api

./: .coverage  .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py  exception_handlers.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  movies.py
app/cache/: base.py  memory_cache.py  redis_cache.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/models/: common.py  credit.py  image.py  import_preview.py  movie.py  video.py
app/providers/: base.py
app/providers/tmdb/: client.py  mapper.py  models.py  provider.py
app/repositories/: cache_repository.py
app/services/: import_preview_service.py  movie_metadata_service.py
app/utils/: dates.py  genre_mapper.py  image_urls.py
docs/: antigravity-test-report.md  api-contract.md  architecture.md  local-testing-guide.md
docs/postman/: LoraFilm-Movie-Metadata-API.postman_collection.json  environment.json
lorafilm_movie_metadata_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/integration/: test_endpoints.py  test_endpoints_more.py
tests/unit/: test_cache.py  test_mapper.py  test_utils.py
