[project]
name = "lorafilm-movie-metadata-api"
version = "1.0.0"
description = "LoraFilm Movie Metadata API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "httpx>=0.27.0",
    "redis>=5.0.7",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "types-redis>=4.6.0.20240425"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
